src/test/ui/target-feature/gate.stderr
error[E0658]: the target feature `avx512bw` is currently unstable
  --> $DIR/gate.rs:31:18
   |
LL | #[target_feature(enable = "avx512bw")]
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44839 <https://github.com/dust-lang/dust/issues/44839> for more information
   = help: add `#![feature(avx512_target_feature)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
